docs: add swagger doc to create transaction
